fix: change bestpath trace
Signed-off-by: kruegerhash <landolf.kr2@gmail.com>